[tool.poetry]
name = "pyredox"
version = "0.1.0-alpha.1"
description = ""
authors = ["Mike Mabey <mike.mabey@cedar.com>"]
homepage = "https://github.com/cedar-team/pyredox"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pydantic = "~1.9.0"
dataclasses = { version = "^0.8", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^7"
pre-commit = "^2.17"
tox = "^3.23.0"
coveralls = "^3.0.1"
ufmt = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36,py37,py38,py39,py310,py311
skip_missing_interpreters = True

[tox:.package]
basepython = python3

[testenv]
deps =
    pytest
    coveralls
commands =
    coverage run --source pyredox -m pytest
"""
