[tool.poetry]
name = "redox_parser"
version = "1.0.4"
description = ""
authors = ["Mike Mabey <mike.mabey@cedar.com>"]
homepage = "https://github.com/cedar-team/redox_parser"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "~1.9.0"

[tool.poetry.dev-dependencies]
Brotli = "^1.0.9"
beautifulsoup4 = "^4.11.1"
coveralls = "^3.3.1"
pre-commit = [
    { version = "^3.1", python = ">=3.8,<4.0"},
    { version = "^2", python = "<3.8"}
]
pytest = "^7"
retry2 = "^0.9.3"
tox = "^4.4"
ufmt = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = True
    envlist = py37,py38,py39,py310,py311
    skip_missing_interpreters = True

    [tox:.package]
    basepython = python3

    [testenv]
    passenv = GITHUB_*,COVERALLS_*
    deps =
        pytest
        coveralls
        retry2
    allowlist_externals = coverage
    commands =
        coverage run --source redox_parser -m pytest -vv
"""
